--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.main-header,
+.header,
 .modal__header {
   display: flex;
   flex-direction: row;
@@ -13,17 +13,17 @@
   justify-content: space-between;
 }
 
-.main-header {
+.header {
   box-shadow: 0px 0px 10px #000000;
   padding: 1rem 2rem;
 }
 
-.main-header__title {
+.title {
   font-family: "Arial Black";
 }
 
-.main-header__title,
-.main-header__user {
+.title,
+.header__user {
   padding: 0;
   margin: 0;
   font-size: 1.6rem;
