--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,7 @@
   margin-bottom: 5rem;
 }
 
-.main-container > section:first-child {
+.main-container .section:first-child {
   margin-top: 5rem;
 }
 
